TRYING to fix BG issue on mobile

--- a/css/magnific-popup.css
+++ b/css/magnific-popup.css
@@ -7,7 +7,7 @@
   z-index: 1042;
   overflow: hidden;
   position: fixed;
-  /*background: #0b0b0b;*/
+  background: #0b0b0b;
   opacity: 0.6; }
 
 .mfp-wrap {
